Fixed Genre buttons on dark mode.

--- a/themes/jaxplays/static/css/darkmode.css
+++ b/themes/jaxplays/static/css/darkmode.css
@@ -6,7 +6,7 @@
 }
 
 .dark-mode,
-.dark-mode .black,
+.dark-mode .black:not(.dark-mode .black.bg-yellow),
 .dark-mode *:not(#dark-mode-icon):not(a):not(.nested-links):not(.pagination span) {
 	color: #fff;
 }
